fix: DATE_FORMATTER 수정 및 Member final선언